--- a/gift guide.html
+++ b/gift guide.html
@@ -23,7 +23,7 @@
             <h5><a href="./men.html">MEN</a></h5>
         </div>
         <div>
-            <h5><a href="./beauty.html">BEAUTY</a></h5>
+            <h5><a href="./beauty.html">ACCESSORIES</a></h5>
         </div>
         <div>
             <h5><a href="./kids.html">KIDS</a></h5>
@@ -52,8 +52,8 @@
         <div id="cart">
             <a href="./cart.html"><img src="img/cart.png" alt=""></a>
         </div>
-        <div>
-            <img src="img/profile.png" alt="">
+        <div id="signin">
+            <a href="signin.html"><img src="img/profile.png" alt=""></a>
         </div>
         <div id="search">
                 <h5>🔍 SEARCH</h5>
