--- a/men.html
+++ b/men.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/men.css">
     <title>Bagelly Online Shop</title>
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+/>
 </head>
 <body>
 <div id="nav">
@@ -23,7 +27,7 @@
             <h5><a href="./men.html">MEN</a></h5>
         </div>
         <div>
-            <h5><a href="./beauty.html">BEAUTY</a></h5>
+            <h5><a href="./beauty.html">ACCESSORIES</a></h5>
         </div>
         <div>
             <h5><a href="./kids.html">KIDS</a></h5>
@@ -52,14 +56,46 @@
         <div id="cart">
             <a href="./cart.html"><img src="img/cart.png" alt=""></a>
         </div>
-        <div>
-            <img src="img/profile.png" alt="">
+        <div id="signin">
+            <a href="signin.html"><img src="img/profile.png" alt=""></a>
         </div>
         <div id="search">
                 <h5>🔍 SEARCH</h5>
         </div>    
     </div>
 </div>
+<!-- sliderShow -->
+<div class="swiper mySwiper">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide">
+        <img src="https://modesens.com/banner/14398/getimg/?img=%2Fbanner%2F20221212-modesens-HolidaySale-1140x400-EN_1670831157.jpg"
+         alt="">
+      </div>
+      <div class="swiper-slide">
+        <img src="https://modesens.com/banner/14454/getimg/?img=%2Fbanner%2F20221214-modesens-Prada-1140x400-F-EN.jpg"
+         alt="">
+      </div>
+      <div class="swiper-slide">
+        <img src="https://modesens.com/banner/14237/getimg/?img=%2Fbanner%2F20221123-modesens-LJ-holiday-1140x400_1669184089.jpg"
+         alt="">
+      </div>
+      <div class="swiper-slide">
+        <img src="https://modesens.com/banner/14508/getimg/?img=%2Fbanner%2F20221215-modesens-Mansur-1140x400-F-US-EN.jpg"
+         alt="">
+      </div>
+      <div class="swiper-slide">
+        <img src="https://modesens.com/banner/14480/getimg/?img=%2Fbanner%2F20221208-modesens-LeaningIntoLuxe-1140x400-EN.jpg"
+         alt="">
+      </div>
+      <div class="swiper-slide">
+        <img src="https://modesens.com/banner/14509/getimg/?img=%2Fbanner%2F20221215-modesens-Moda-1140x400-F-EN.jpg"
+         alt="">
+      </div>
+    </div>
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-pagination"></div>
+  </div>
 <h2>Featured Partners</h2>
     <p class="para">Compare across our 500+ partner stores to find the products you want at the best price.</p>
     <div id="partners">
@@ -321,4 +357,23 @@
         </div>
     </div> 
 </body>
+<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+<script>
+    var swiper = new Swiper(".mySwiper", {
+      spaceBetween: 30,
+      centeredSlides: true,
+      autoplay: {
+        delay: 2500,
+        disableOnInteraction: false,
+      },
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: true,
+      },
+      navigation: {
+        nextEl: ".swiper-button-next",
+        prevEl: ".swiper-button-prev",
+      },
+    });
+  </script>
 </html>
