--- a/beauty.html
+++ b/beauty.html
@@ -61,10 +61,10 @@
     </div>
 </div>
 <div id="beautyheading">
-    <h1>Designer Beauty</h1>
+    <h1>ELECTRONIC ACCESSORIES</h1>
     <p>
-        Designer Beauty
-        Shop designer beauty with price comparison across 500+ stores in one place. Discover the latest designer beauty at ModeSens.
+        Electronic Accessories
+        Shop Electronic Accessories with price comparison across 500+ stores in one place. Discover the latest Electronic Accessories at Bagelly.
     </p>
 </div>
 <select id="filter">
